# ConnectomeBench

./: .env.example  .gitignore  README.md  pyproject.toml  setup_fish1_auth.py
analysis/: analyze_compute_costs.py  analyze_edit_distributions.py
docs/: DEEP_DIVE.md
examples/: merge_error_identification.py  split_error_correction.py  tutorial_edit_history_analysis.ipynb
reports/: gpu_cost_section_compact.tex
reports/docs/: ANALYSIS_SUMMARY.md  ICML_COMPREHENSIVE_EDIT_DISTRIBUTION_REPORT.txt  ICML_REPORT_WORD_FORMATTED.docx.txt  figure_captions.md  figure_generation_guide.md  gpu_cost_icml_section.md  icml_figures_summary.md  icml_new_figures_captions.md  ioda_structure_breakdown.md
reports/edit_distributions/: edit_distribution_fly_n100.json  edit_distribution_fly_n1000.json  edit_distribution_fly_n500.json  edit_distribution_mouse_all_samples.json  edit_distribution_mouse_n100.json  edit_distribution_mouse_n1000.json  edit_distribution_mouse_n500.json
scripts/: CAVEsetup.ipynb  generate_icml_cost_figures.py  generate_icml_figures.py  get_data.py  merge_resolution.py  segmentation_classification.py  setup_cave_auth.py  split_resolution.py
src/: analysis_utils.py  connectome_visualizer.py  prompts.py
