[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connectomebench"
version = "0.1.0"
description = "A benchmark to evaluate the proofreading capabilities of multimodal large language models (LLMs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "caveclient==7.5.1",
    "cloud-volume>=12.2.0",
    "datasets>=4.4.1",
    "flask>=3.1.2",
    "google-genai>=1.16.1",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "litellm>=1.67.5",
    "matplotlib>=3.10.3",
    "multiprocess==0.70.17",
    "navis>=1.10.0",
    "octarine-navis-plugin==0.1.2",
    "octarine3d==0.2.5",
    "openai>=1.80.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.1",
    "pygfx==0.7.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-xdist>=3.3.1",
    "pytest-timeout>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Pytest configuration (can also use pytest.ini)
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "-ra"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_api: marks tests that require API access",
    "requires_data: marks tests that require data files",
]
asyncio_mode = "auto"
